changed image in tile / fix for image border radius that was too big in a tile / orientation tile doc is now behaving better

--- a/packages/components/src/tile/src/Tile.css
+++ b/packages/components/src/tile/src/Tile.css
@@ -108,13 +108,13 @@
 }
 
 .o-ui-tile-vertical .o-ui-tile-thumbnail {
-    border-top-left-radius: inherit;
-    border-top-right-radius: inherit;
+    border-top-left-radius: calc(var(--o-ui-br-rounded) - 1px);
+    border-top-right-radius: calc(var(--o-ui-br-rounded) - 1px);
 }
 
 .o-ui-tile-horizontal .o-ui-tile-thumbnail {
-    border-top-left-radius: inherit;
-    border-bottom-left-radius: inherit;
+    border-top-left-radius: calc(var(--o-ui-br-rounded) - 1px);
+    border-bottom-left-radius: calc(var(--o-ui-br-rounded) - 1px);
 }
 
 /* IMAGE */
@@ -124,13 +124,13 @@
 }
 
 .o-ui-tile-vertical .o-ui-tile-image {
-    border-top-left-radius: inherit;
-    border-top-right-radius: inherit;
+    border-top-left-radius: calc(var(--o-ui-br-rounded) - 1px);
+    border-top-right-radius: calc(var(--o-ui-br-rounded) - 1px);
 }
 
 .o-ui-tile-horizontal .o-ui-tile-image {
-    border-top-left-radius: inherit;
-    border-bottom-left-radius: inherit;
+    border-top-left-radius: calc(var(--o-ui-br-rounded) - 1px);
+    border-bottom-left-radius: calc(var(--o-ui-br-rounded) - 1px);
 }
 
 /* ILLUSTRATION */
@@ -139,13 +139,13 @@
 }
 
 .o-ui-tile-vertical .o-ui-tile-illustration {
-    border-top-left-radius: inherit;
-    border-top-right-radius: inherit;
+    border-top-left-radius: calc(var(--o-ui-br-rounded) - 1px);
+    border-top-right-radius: calc(var(--o-ui-br-rounded) - 1px);
 }
 
 .o-ui-tile-horizontal .o-ui-tile-illustration {
-    border-top-left-radius: inherit;
-    border-bottom-left-radius: inherit;
+    border-top-left-radius: calc(var(--o-ui-br-rounded) - 1px);
+    border-bottom-left-radius: calc(var(--o-ui-br-rounded) - 1px);
 }
 
 /* MAIN SECTION */
